# Pharos-Auto-Bot-Super

./: README.md  accounts.txt  proxy.txt
PharosFrontend/: PharosFrontend.csproj  Program.cs
pharos_backend/: Cargo.toml  build.rs
pharos_backend/src/: main.rs
pharos_backend/src/bots/: autostaking.rs  mod.rs
pharos_backend/src/proto/: pharos.proto
